--- a/report.ipynb
+++ b/report.ipynb
@@ -128,10 +128,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "<img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\"/>\n",
-    "\n",
-    "*Set Up*"
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\"/>\n",
+    "    <em>Set Up</em>\n",
+    "</div>"
    ]
   },
   {
@@ -154,21 +154,27 @@
    "source": [
     "Our vision system forms the baseline of the Thymio's understanding of the environment. Using the OpenCV library, the map is created in multiple steps, each of which extracting information from the camera feed, allowing our program to identify markers, determine their orientation, and recognize obstacles. In the following, our procedure will be shown with the example of the following image feed:\n",
     "\n",
-    "![Simple Camera Feed](./report_images/image_processing_images/simple_camera_feed.png)\n",
-    "*Unprocessed Camera Feed*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/simple_camera_feed.png\" alt=\"Simple Camera Feed\">\n",
+    "    <em>Unprocessed Camera Feed</em>\n",
+    "</div>\n",
     "\n",
     "\n",
     "##### Marker Detection\n",
     "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed.\n",
     "\n",
-    "![Processed Image with Map Filling the Entire Screen](./report_images/image_processing_images/normal_feed_img.png)\n",
-    "*Processed Feed with Map Filling the Screen*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/normal_feed_img.png\" alt=\"Processed Image with Map Filling the Entire Screen\">\n",
+    "    <em>Processed Feed with Map Filling the Screen</em>\n",
+    "</div>\n",
     "\n",
     "##### Grayscale Conversion and Thresholding\n",
     "To simplify the object detection, we converted the camera feed to grayscale. As the objects are represented as black shaped, applying thresholding to the image allowed for easy extraction of their location in the environment.\n",
     "\n",
-    "![Binary Image](./report_images/image_processing_images/binary_img.png)\n",
-    "*Binary Image*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/binary_img.png\" alt=\"Binary Image\">\n",
+    "    <em>Binary Image</em>\n",
+    "</div>\n",
     "\n",
     "The resulting image still contains some noise due to the black thymio sensors being detected as obstacles. This is resolved in the next step. \n",
     "\n",
@@ -177,22 +183,29 @@
     "\n",
     "After conversion, the 2D grid looks as follows:\n",
     "\n",
-    "![Grid Map with obstacles](./report_images/image_processing_images/grid_map_with_islands_not_increased_object_size.png)\n",
-    "*Grid Map with Obstacles*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/grid_map_with_islands_not_increased_object_size.png\" alt=\"Grid Map with obstacles\">\n",
+    "    <em>Grid Map with Obstacles</em>\n",
+    "</div>\n",
     "\n",
     "Here, still, the map contains the noise from the black sensors of the Thymio and the ArUco markers of which some are not entirely erased from the map. This is solved by removing all obstacles that are detected to be small islands which results in the following:\n",
-    "![Grid Map with Islands Removed](./report_images/image_processing_images/grid_map_islands_removed_not_increased.png)\n",
-    "*Grid Map with Islands Removed*\n",
     "\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/grid_map_islands_removed_not_increased.png\" alt=\"Grid Map with Islands Removed\">\n",
+    "    <em>Grid Map with Islands Removed</em>\n",
+    "</div>\n",
     "\n",
     "Lastly, to account for the width of the Thymio, obstacles are artificially enlarged to ensure that the Thymio cannot drive too close to the obstacles. The resulting map looks as follows:\n",
     "\n",
-    "![Grid Map with Object Size Increased](./report_images/image_processing_images/grid_map_islands_removed_objects_increased.png)\n",
-    "*Grid Map with Object Size Increased*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/grid_map_islands_removed_objects_increased.png\" alt=\"Grid Map with Object Size Increased\">\n",
+    "    <em>Grid Map with Object Size Increased</em>\n",
+    "</div>\n",
     "\n",
     "\n",
     "\n",
     "##### Dynamic Updates\n",
+    "\n",
     "The grid is continuously updated with the positions of the Thymio and the goal within the map. These updates ensure that the Thymio can make informed decisions and enable recomputing the path after kidnapping events or motion control adjustments.\n",
     "\n",
     "This part lays the groundwork for successful navigation of the Thymio robot in the terrain."
@@ -218,9 +231,10 @@
     "##### Path Discretization\n",
     "To have the Thymio drive more smoothly, the computed path is discretized into a series of fewer cells. Each cell represents a direction change in the path. The Thymio receives these cells as intermediate goals allowing a more natural movement along the path and decreasing the number of sudden direction changes. The resulting path is marked red in the map and the direction changes purple. With this addition, the grid image looks as follows:\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/grid_map_with_path.png)\n",
-    "\n",
-    "*Grid Map Marked with Path and Direction Changes* \n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/grid_map_with_path.png\" alt=\"Image Alt Text\">\n",
+    "    <em>Grid Map Marked with Path and Direction Changes</em>\n",
+    "</div>\n",
     "\n",
     "##### Integration with Vision System\n",
     "Based on the information received from the vision system, the path is calculated and obstacles can be avoided. Additionally, kidnapping of the thymio and the goal can be handled. Whenever such a kidnapping occurs, the path is recomputed so that the goal can be reached.\n",
@@ -252,14 +266,18 @@
     "   \n",
     "##### ROTATE\n",
     "\n",
-    "![Image Alt Text](./report_images/BOMR_Rotation.PNG)\n",
-    "     *ROTATE Mode Illustration*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/BOMR_Rotation.PNG\" alt=\"Image Alt Text\">\n",
+    "    <em>ROTATE Mode Illustration</em>\n",
+    "</div>\n",
     "\n",
     "As we observe in the picture, the ROTATE mode calculates the error between the desired angle and the Thymio's actual angle. Once the calculation is done, the Thymio receives the shortest path to align itself with the desired angle and will rotate on its axis to start the correction. Once the Thymio has attained the correct angle, the Thymio will transition the MOVE state and drive towards the next point.\n",
     "\n",
     "##### MOVE\n",
-    "![Image Alt Text](./report_images/BOMR_PI.PNG)\n",
-    "    *MOVE Mode Illustration*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/BOMR_PI.PNG\" alt=\"Image Alt Text\">\n",
+    "    <em>MOVE Mode Illustration</em>\n",
+    "</div>\n",
     "\n",
     "After aligning with the desired angle, the PI controller handles the movement towards the next point. During this movement, the regulation works to maintain the Thymio's direction within the threshold angle. When the Thymio is in the threshold zone, *the green cone*, both wheels rotate at the same velocity. When the Thymio is out of the cone, the PI controller corrects the direction by increasing the speed of one wheel and decreasing the speed of the other one. The regulation works until the error is inside the threshold zone, avoiding oscillation around the desired angle.\n",
     "     \n",
@@ -270,8 +288,10 @@
     "\n",
     "##### Program of the movement\n",
     "Below is a schematic illustrating the configured motion control of Thymio, showcasing how it is orchestrated to accomplish its mission\n",
-    "![Image Alt Text](./report_images/BOMR_MotionStep.PNG)\n",
-    "     *Schematic of the Movement*\n"
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/BOMR_MotionStep.PNG\" alt=\"Image Alt Text\">\n",
+    "    <em>Schematic of the Movement</em>\n",
+    "</div>\n"
    ]
   },
   {
@@ -294,10 +314,13 @@
     "\n",
     "It therefore acts as a simple Finite State Machine, illustrated in the image below:\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/local_navigation_fsm.png)\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/local_navigation_fsm.png\" alt=\"Local Navigation FSM\">\n",
+    "    <em>Local Navigation Finite State Machine illustration</em>\n",
+    "</div>\n",
     "\n",
     "\n",
-    "*Local Navigation Finite State Machine illustration*\n",
+    "\n",
     "\n",
     "The START State allows Global Navigation to steer the Thymio freely, so long as no obstacle is detected by the sensors, which will drive a state change.\n",
     "\n",
@@ -307,9 +330,10 @@
     "\n",
     "The local navigation path is illustrated below:\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/grid_map_with_local_avoidance.png)\n",
-    "\n",
-    "*Grid Map Marked with Local Avoidance Path*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/grid_map_with_local_avoidance.png\" alt=\"Image Alt Text\">\n",
+    "    <em>Grid Map Marked with Local Avoidance Path</em>\n",
+    "</div>\n",
     "\n",
     "The Thymio detects the object (here in blue) and deviates from the Global Path (in red), choosing to go on the *outside* of the path's turn, thus drawing a circle, here in orange.\n",
     "\n",
@@ -465,11 +489,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
+   "source": []
   }
  ],
  "metadata": {
@@ -488,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
