FINAL VIDEO MADE WITH THIS COMMIT

--- a/report.ipynb
+++ b/report.ipynb
@@ -469,11 +469,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "is_executing": true
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-12-05T14:24:33.912896500Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initializing\n",
+      "WebcamFeed initialized.\n"
+     ]
+    }
+   ],
    "source": [
-    "%run ./global_nav/GlobalNavigation.py"
+    "%run ./Main.py"
    ]
   },
   {
