--- a/report.ipynb
+++ b/report.ipynb
@@ -393,9 +393,11 @@
    "source": [
     "\n",
     "##### Details in the choice of matrices \n",
-    "the covariance matrices for the kalman filter are the following:\n",
-    "- R = Measurement noise covariance\n",
-    "- Q = Process noise covariance\n"
+    "the matrices for the kalman filter are the following:\n",
+    "- F = State Transition Matrix\n",
+    "- Q = Process Noise Covariance\n",
+    "- H = Measurement Function  \n",
+    "- R =  Measurement Noise Covariance"
    ]
   },
   {
@@ -403,18 +405,29 @@
    "metadata": {},
    "source": [
     "\\begin{aligned}\n",
-    " R=\\left[\\begin{array}{llll}\n",
-    "\\sigma_x^2 & 0 & 0 & 0 \\\\\n",
-    "0 & \\sigma_y^2 & 0 & 0 \\\\\n",
-    "0 & 0 & \\sigma_\\theta^2 & 0 \\\\\n",
+    "& F=\\left[\\begin{array}{llll}\n",
+    "1 & 0 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 1 & 0 \\\\\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right] \\quad Q=\\left[\\begin{array}{llll}\n",
+    "\\sigma_{Qx}^2 & 0 & 0 & 0 \\\\\n",
+    "0 & \\sigma_{Qy}^2 & 0 & 0 \\\\\n",
+    "0 & 0 & \\sigma_{Q\\theta}^2 & 0 \\\\\n",
+    "0 & 0 & 0 & 0\n",
+    "\\end{array}\\right]  \\\\\n",
+    "& H=\\left[\\begin{array}{llll}\n",
+    "1 & 0 & 0 & 0 \\\\\n",
+    "0 & 1 & 0 & 0 \\\\\n",
+    "0 & 0 & 1 & 0 \\\\\n",
+    "0 & 0 & 0 & 1\n",
+    "\\end{array}\\right] \n",
+    "\\quad R=\\left[\\begin{array}{llll}\n",
+    "\\sigma_{Rx}^2 & 0 & 0 & 0 \\\\\n",
+    "0 & \\sigma_{Ry}^2 & 0 & 0 \\\\\n",
+    "0 & 0 & \\sigma_{R\\theta}^2 & 0 \\\\\n",
     "0 & 0 & 0 & 0.1\n",
-    "\\end{array}\\right] \\\\\n",
-    " \\quad Q=\\left[\\begin{array}{llll}\n",
-    "\\sigma_x^2 & 0 & 0 & 0 \\\\\n",
-    "0 & \\sigma_y^2 & 0 & 0 \\\\\n",
-    "0 & 0 & \\sigma_\\theta^2 & 0 \\\\\n",
-    "0 & 0 & 0 & 0.001\n",
-    "\\end{array}\\right]\n",
+    "\\end{array}\\right] \n",
     "\\end{aligned}"
    ]
   },
@@ -423,11 +436,13 @@
    "metadata": {},
    "source": [
     "\n",
-    "The variances were determined through experimental considerations. Regarding the process noise covariance matrix (Q), we assigned a variance of 0.001 to x and y directions, reflecting the comparable uncertainty associated with forward movement in these dimensions. In contrast, the rotation variance was set to 1, acknowledging a higher level of uncertainty when determining orientation during movement.\n",
+    "The variances were determined through experimental considerations. The best values were found to be:\n",
+    "> $\\sigma_{Qx}^2 = \\sigma_{Qy}^2 = 0.001, \\ \\sigma_{Q\\theta}^2 = 1$\n",
     "\n",
-    "The measurement noise covariance matrix was also defined through experimental tuning, resulting in a configuration with a variance of 0.1 across all sensor measurements. \n",
+    "> $\\sigma_{Rx}^2 = \\sigma_{Ry}^2 = \\sigma_{R\\theta}^2 = 0.1$\n",
+    " \n",
     "\n",
-    "have yet to explain the offset"
+    "Each parameter was tuned seperately under the assumption that there is no correlation between the parameters."
    ]
   },
   {
@@ -493,7 +508,7 @@
     }
    ],
    "source": [
-    "%run ./global_nav/GlobalNavigation.py"
+    "%run ./Main.py"
    ]
   },
   {
