added code for local navigation to the report

--- a/report.ipynb
+++ b/report.ipynb
@@ -137,9 +137,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\"/>\n",
-    "\n",
-    "*Set Up*"
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/set_image.png\" alt=\"Image Alt Text\" width=\"300\" height=\"400\"/>\n",
+    "    <em>Set Up</em>\n",
+    "</div>"
    ]
   },
   {
@@ -164,22 +165,28 @@
    "source": [
     "Our vision system forms the baseline of the Thymio's understanding of the environment. Using the OpenCV library, the map is created in multiple steps, each of which extracting information from the camera feed, allowing our program to identify markers, determine their orientation, and recognize obstacles. In the following, our procedure will be shown with the example of the following image feed:\n",
     "\n",
-    "![Simple Camera Feed](./report_images/image_processing_images/simple_camera_feed.png)\n",
-    "*Unprocessed Camera Feed*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/simple_camera_feed.png\" alt=\"Simple Camera Feed\">\n",
+    "    <em>Unprocessed Camera Feed</em>\n",
+    "</div>\n",
     "\n",
     "<a id=\"marker-detection\"></a>\n",
     "##### Marker Detection\n",
     "We used OpenCV's ArUco marker detection algorithm to find the key elements and their orientation within the terrain, specifically, the Thymio robot, the goal, and the corners of the map. Based on this information, a transformation matrix is applied to the image to place the map corners into the corners of the image so that the map fills the entire video feed.\n",
     "\n",
-    "![Processed Image with Map Filling the Entire Screen](./report_images/image_processing_images/normal_feed_img.png)\n",
-    "*Processed Feed with Map Filling the Screen*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/normal_feed_img.png\" alt=\"Processed Image with Map Filling the Entire Screen\">\n",
+    "    <em>Processed Feed with Map Filling the Screen</em>\n",
+    "</div>\n",
     "\n",
     "<a id=\"thresholding\"></a>\n",
     "##### Grayscale Conversion and Thresholding\n",
     "To simplify the object detection, we converted the camera feed to grayscale. As the objects are represented as black shaped, applying thresholding to the image allowed for easy extraction of their location in the environment.\n",
     "\n",
-    "![Binary Image](./report_images/image_processing_images/binary_img.png)\n",
-    "*Binary Image*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/binary_img.png\" alt=\"Binary Image\">\n",
+    "    <em>Binary Image</em>\n",
+    "</div>\n",
     "\n",
     "The resulting image still contains some noise due to the black thymio sensors being detected as obstacles. This is resolved in the next step. \n",
     "\n",
@@ -310,27 +317,93 @@
     "\n",
     "During each iteration of the primary while True loop, the proximity sensors values are pulled, and they are sent to the `judge_severity()` method. This method, determines the danger level for each sensor, which increases when obstacles are nearer. The maximum danger level among these sensors is then assigned to the `danger_state` attribute within the local navigation instance.\n",
     "\n",
-    "The DangerState enum encapsulates threshold values, which have been fine-tuned through experimentation to reflect different danger levels. In cases where the Thymio finds itself in an unsafe state, global navigation is temporarily suspended and a status variable (`local_nav.state`) is modified to track in which phase of local navigation the Thymio is. \n",
-    "\n",
-    "\n",
+    "The DangerState enum encapsulates threshold values, which have been fine-tuned through experimentation to reflect different danger levels. In cases where the Thymio finds itself in an unsafe state, global navigation is temporarily suspended and a status variable (`local_nav.state`) is modified to track in which phase of local navigation the Thymio is. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def judge_severity(self):\n",
+    "        \"\"\"\n",
+    "        Updates the danger_state of the LocalNavigation object and returns it\n",
+    "        \"\"\"\n",
+    "        self.danger_state = DangerState.SAFE\n",
+    "        #Do no handle the back sensors, since Thymio does not reverse in Global Nav\n",
+    "        for i in range(5):\n",
+    "            if (self.prox_horizontal[i] > SensorThresh.STOP_THRESH.value):\n",
+    "                self.danger_state = DangerState.STOP\n",
+    "                return self.danger_state    #If any sensor is at STOP, we do not overwrite it\n",
+    "            elif (self.prox_horizontal[i] > SensorThresh.WARN_THRESH.value):\n",
+    "                self.danger_state = DangerState.WARN\n",
+    "        return self.danger_state"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Local Navigation unfolds in two distinct phases:\n",
     "\n",
     "- Rotation:\n",
     "In this phase, the Thymio robot determines a turning direction based on the global path's next turn direction. The objective is to navigate along the outer edge of the turn, a strategy particularly effective when following paths generated by Dijkstra navigation. As these paths tend to adhere closely to global obstacles, adopting an outward trajectory facilitates global obstacle avoidance.\n",
     "\n",
-    "    Once the turning direction is determined, the Thymio initiates a rotational movement in place. This rotation persists until the robot no longer detects obstacles in its proximity. Importantly, even after achieving clearance, the robot continues to rotate for a few additional iterations. This deliberate extension adds a margin of safety, preventing the Thymio from executing a turn too close to an obstacle and potentially colliding with it.\n",
+    "    Once the turning direction is determined, the Thymio initiates a rotational movement in place. This rotation persists until the robot no longer detects obstacles in its proximity. Importantly, even after achieving clearance, the robot continues to rotate for a few additional iterations. This deliberate extension adds a margin of safety, preventing the Thymio from executing a turn too close to an obstacle and potentially colliding with it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def determine_turn_dir(self, dir_changes, next_dir_change_idx):\n",
+    "        \"\"\"\n",
+    "        Determines turn direction for circling an object, based on the Dijktra path.\n",
+    "        Since the path tends to stick to object, circling outside the next turn will\n",
+    "        avoid the Local obstacle without crossing a global obstacle.\n",
+    "        Updates turn_dir, to be called in turn()\n",
+    "        \"\"\"\n",
+    "        previous_cell = np.array(dir_changes[next_dir_change_idx-1])\n",
+    "        current_cell = np.array(dir_changes[next_dir_change_idx])\n",
+    "        next_cell = np.array(dir_changes[next_dir_change_idx+1])\n",
     "\n",
+    "        current_vector = current_cell - previous_cell\n",
+    "        next_vector = next_cell - current_cell\n",
+    "\n",
+    "        orientation_current_v = rotation_nextpoint(current_vector)\n",
+    "        orientation_next_v = rotation_nextpoint(next_vector)\n",
+    "\n",
+    "        orientation_difference = (orientation_next_v - orientation_current_v)%360\n",
+    "        #We have now the turn angle of the next turn in the path, determine which way to turn to circle wide around it\n",
+    "\n",
+    "        if orientation_difference < 180:\n",
+    "            self.turn_dir = 'r'\n",
+    "        else:\n",
+    "            self.turn_dir = 'l'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Circling:\n",
     "With the Thymio's orientation now firmly established through the preceding rotation phase, the robot enters the circling phase. In this stage, forward motion is initiated with a subtle offset between the left and right motors, enabling the Thymio to trace a wide circle around the detected obstacle.\n",
     "\n",
     "    If an obstacle is detected during this circling motion, the robot seamlessly transitions back to the turning phase, reverting to the initially chosen turning direction. This strategic continuity allows the Thymio to gracefully navigate around elongated obstacles by tracing circles along their edge.\n",
     "    The circling phase concludes when the Thymio reconnects with the Global Navigation path, which is bound to happen, as pathfinding is designed to create non-looping paths. Once the Thymio detects its return to the path, it recomputes the remaining checkpoints (turning points), selects the next one in line, and gracefully relinquishes control back to the Global Navigation module.\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "It therefore acts as a simple Finite State Machine, illustrated in the image below:\n",
     "\n",
     "![Image Alt Text](./report_images/image_processing_images/local_navigation_fsm.png)\n",
-    "\n",
     "\n",
     "*Local Navigation Finite State Machine illustration*\n",
     "\n",
@@ -348,7 +421,7 @@
     "\n",
     "The Thymio detects the object (here in blue) and deviates from the Global Path (in red), choosing to go on the *outside* of the path's turn, thus drawing a circle, here in orange.\n",
     "\n",
-    "Please note however that this image is never generated, as the camera and the computer are never aware of the local obstacle, this is only an illustration of a path possibly taken during local navigation.\n"
+    "Please note however that this image is never generated, as the camera and the computer are never aware of the local obstacle, this is only an illustration of a path possibly taken during local navigation."
    ]
   },
   {
@@ -367,8 +440,33 @@
     "\n",
     "<a id=\"wheel-speed-measurements\"></a>\n",
     "##### Wheel Speed Measurements\n",
-    "The wheel speed measurements are used for both estimating the position and orientation of the Thymio. To predict the new orientation, the angular velocity is calculated based on the difference of wheel speeds and a baseline minimum period for a 360° turn of the Thymio. Additionally, the wheel speeds are used to estimate the new position of the Thymio. \n",
+    "The wheel speed measurements are used for both estimating the position and orientation of the Thymio. A refinement was introduced by incorporating a max-min constraint, to mitigate the impact of noise on the speed sensors. This addition serves to limit the potential noise-induced variations in the sensor readings, contributing to a more stable and reliable interpretation of the Thymio robot's speed information. To predict the new orientation, the angular velocity is calculated based on the difference of wheel speeds and a baseline minimum period for a 360° turn of the Thymio. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# WHEEL_MIN_SPEED <= v <= WHEEL_MAX_SPEED\n",
+    "v = (left_wheel_speed + right_wheel_speed) / 2.0\n",
     "\n",
+    "right_wheel_speed = max(min(right_wheel_speed, WHEEL_MAX_SPEED), WHEEL_MIN_SPEED)\n",
+    "left_wheel_speed = max(min(left_wheel_speed, WHEEL_MAX_SPEED), WHEEL_MIN_SPEED)\n",
+    "\n",
+    "period = 0\n",
+    "if abs(right_wheel_speed - left_wheel_speed) > 0.5:  # avoid division by 0 and large values\n",
+    "    period = ((2*WHEEL_MAX_SPEED) / (right_wheel_speed - left_wheel_speed)) * MIN_THYMIO_360_TURN_PERIOD  # positive sense is counterclockwise\n",
+    "    w = 0\n",
+    "    if period != 0:\n",
+    "        w = - 2 * np.pi / period"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Camera input\n",
     "As the camera input already is provided in grid coordinates by the computer vision, there is no additional processing needed for it.\n",
     "\n",
