correct wrong/missing table of contents elmts, change python code to unrunnable md python code

--- a/report.ipynb
+++ b/report.ipynb
@@ -24,23 +24,22 @@
     "         - [2D Grid Representation](#grid-representation)\n",
     "         - [Dynamic Updates](#dynamic-updates)\n",
     "      - 3.2 [Global Navigation](#global-navigation)\n",
-    "         -  [dijkstra Algorithm](#Dijkstra-algorithm)\n",
+    "         -  [Dijkstra Algorithm](#dijkstra-algorithm)\n",
     "         -  [Path Discretization](#path-discretization)\n",
     "         -  [Integration with Vision System](#integration-vision)\n",
     "      - 3.3 [Motion Control](#motion-control)\n",
     "         -  [Rotate](#rotate)\n",
     "         -  [Move](#move)\n",
     "      - 3.4 [Local Navigation](#local-navigation)\n",
-    "         -  [Implementation Details](#implementation-details)\n",
-    "         -  [Functions](#functions1)\n",
     "      - 3.5 [Kalman Filter](#kalman-filter)\n",
     "         - [Wheel Speed Measurements](#wheel-speed-measurements)\n",
     "         - [Prediction and Update Step](#prediction-update-step)\n",
     "         - [Handling Orientation Jumps](#handling-orientation-jumps)\n",
-    "         - [Adaptability to vision](#adaptability-vision)\n",
+    "         - [Adaptability to Vision Feed Cut-Off](#adaptability-vision)\n",
     "         \n",
     "4. [Results](#results)\n",
-    "   - 4.1 [Videos](#video)\n",
+    "   - 4.1 [Video](#video)\n",
+    "   - 4.2 [Run Demo](#demo)\n",
     "   \n",
     "5. [References](#references)\n",
     " \n",
@@ -344,11 +343,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "def judge_severity(self):\n",
     "        \"\"\"\n",
     "        Updates the danger_state of the LocalNavigation object and returns it\n",
@@ -361,7 +359,8 @@
     "                return self.danger_state    #If any sensor is at STOP, we do not overwrite it\n",
     "            elif (self.prox_horizontal[i] > SensorThresh.WARN_THRESH.value):\n",
     "                self.danger_state = DangerState.WARN\n",
-    "        return self.danger_state"
+    "        return self.danger_state\n",
+    "```"
    ]
   },
   {
@@ -377,11 +376,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "def determine_turn_dir(self, dir_changes, next_dir_change_idx):\n",
     "        \"\"\"\n",
     "        Determines turn direction for circling an object, based on the Dijktra path.\n",
@@ -405,7 +403,8 @@
     "        if orientation_difference < 180:\n",
     "            self.turn_dir = 'r'\n",
     "        else:\n",
-    "            self.turn_dir = 'l'"
+    "            self.turn_dir = 'l'\n",
+    "```"
    ]
   },
   {
@@ -427,10 +426,10 @@
     "It therefore acts as a simple Finite State Machine, illustrated in the image below:\n",
     "\n",
     "<div align=\"center\">\n",
-    "    <img src=\"./report_images/image_processing_images/local_navigation_fsm.png\"\n",
+    "    <img src=\"./report_images/image_processing_images/local_navigation_fsm.png\">\n",
+    "    <em>Local Navigation Finite State Machine illustration</em>\n",
     "</div>\n",
     "\n",
-    "*Local Navigation Finite State Machine illustration*\n",
     "\n",
     "\n",
     "The START State allows Global Navigation to steer the Thymio freely, so long as no obstacle is detected by the sensors, which will drive a state change.\n",
@@ -441,9 +440,10 @@
     "\n",
     "The local navigation path is illustrated below:\n",
     "\n",
-    "![Image Alt Text](./report_images/image_processing_images/grid_map_with_local_avoidance.png)\n",
-    "\n",
-    "*Grid Map Marked with Local Avoidance Path*\n",
+    "<div align=\"center\">\n",
+    "    <img src=\"./report_images/image_processing_images/grid_map_with_local_avoidance.png\">\n",
+    "    <em>Illustration of Local Avoidance Path</em>\n",
+    "</div>\n",
     "\n",
     "The Thymio detects the object (here in blue) and deviates from the Global Path (in red), choosing to go on the *outside* of the path's turn, thus drawing a circle, here in orange.\n",
     "\n",
@@ -470,11 +470,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "```python\n",
     "# WHEEL_MIN_SPEED <= v <= WHEEL_MAX_SPEED\n",
     "v = (left_wheel_speed + right_wheel_speed) / 2.0\n",
     "\n",
@@ -486,7 +485,8 @@
     "    period = ((2*WHEEL_MAX_SPEED) / (right_wheel_speed - left_wheel_speed)) * MIN_THYMIO_360_TURN_PERIOD  # positive sense is counterclockwise\n",
     "    w = 0\n",
     "    if period != 0:\n",
-    "        w = - 2 * np.pi / period"
+    "        w = - 2 * np.pi / period\n",
+    "```"
    ]
   },
   {
@@ -593,12 +593,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"video\"></a>\n",
     "##### Video: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -607,8 +608,8 @@
       "text/html": [
        "\n",
        "        <iframe\n",
-       "            width=\"800\"\n",
-       "            height=\"300\"\n",
+       "            width=\"700\"\n",
+       "            height=\"437.5\"\n",
        "            src=\"https://www.youtube.com/embed/gpMigWjB38A\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
@@ -617,24 +618,26 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x2ed77bcae10>"
+       "<IPython.lib.display.YouTubeVideo at 0x2ab19d9c370>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import YouTubeVideo\n",
-    "YouTubeVideo('gpMigWjB38A',width=800, height=300)"
+    "video_height_width_ratio = 1200 / 1920\n",
+    "width = 700\n",
+    "YouTubeVideo('gpMigWjB38A',width=width, height=video_height_width_ratio * width)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id=\"video\"></a>\n",
+    "<a id=\"demo\"></a>\n",
     "# Run Demo"
    ]
   },
@@ -673,9 +676,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"references\"></a>\n",
     "### Resources \n",
     "\n",
-    "https://filterpy.readthedocs.io/en/latest/kalman/KalmanFilter.html\n",
+    "- OpenCv ArUco Markers: https://docs.opencv.org/3.2.0/d5/dae/tutorial_aruco_detection.html\n",
+    "- ArUco Marker Generation: https://chev.me/arucogen/\n",
+    "- Kalman Filter: https://filterpy.readthedocs.io/en/latest/kalman/KalmanFilter.html\n",
     "\n"
    ]
   }
@@ -696,7 +702,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
