add angle jump text

--- a/report.ipynb
+++ b/report.ipynb
@@ -30,6 +30,8 @@
     "      - 3.3 [Motion Control](#motion-control)\n",
     "         -  [Rotate](#rotate)\n",
     "         -  [Move](#move)\n",
+    "         -  [Movement Schematic](#movement-schematic)\n",
+    "         -  [Orientation Angle Challenges](#orientation-angle-challenges)\n",
     "      - 3.4 [Local Navigation](#local-navigation)\n",
     "      - 3.5 [Kalman Filter](#kalman-filter)\n",
     "         - [Wheel Speed Measurements](#wheel-speed-measurements)\n",
@@ -311,14 +313,21 @@
     "\n",
     "We implemented a parameter, called *sum_error_max* to avoid wheel drift during the movement. The maximum value was determined by an experimental way, similar to the regulator parameters.\n",
     "\n",
-    "\n",
-    "##### Program of the movement\n",
+    "<a id=\"movement-schematic\"></a> \n",
+    "##### Schematic of the Movement\n",
     "Finally, you can observe, with the next schematic, how our Thymio's motion control is configure to perform its mission.\n",
     "<div align=\"center\">\n",
     "    <img src=\"./report_images/BOMR_MotionStep.PNG\" alt=\"Schematic of the Movement\">\n",
     "    <em>Schematic of the Movement</em>\n",
     "</div>\n",
     "\n",
+    "<a id=\"orientation-angle-challenges\"></a> \n",
+    "##### Orientation Angle Challenges\n",
+    "One problem we encountered was with the orientation computations for Thymio's the path planning. As the angles were given in the range \\[0, 360), driving straight down on the map, which is a 0° orientation in our coordinate system was problematic. Whenever there were slight orientation changes while driving, the orientation angle of Thymio would jump from 0° to 360° and vice versa. \n",
+    "\n",
+    "As our algorithm relied on computing the difference between the actual orientation of the Thymio and the wanted orientation, such large changes strongly impacted its ability to drive smoothly. We were able to solve this by keeping track of the previously measured orientation and wanted direction and based the new motion control commands on the differences of the previous and new measurements. \n",
+    "\n",
+    "A similar approach was taken in the orientation estimation of our [Kalman Filter](#kalman-filter) implementation to prevent the camera's orientation estimation from dramatically changing predictions due to such angle jumps.\n",
     "\n"
    ]
   },
