clarify details in report

--- a/report.ipynb
+++ b/report.ipynb
@@ -193,7 +193,7 @@
     "\n",
     "<a id=\"grid-representation\"></a>\n",
     "##### 2D Grid Representation\n",
-    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, it is occupied by the Thymio (green), the goal (blue), or an obstacle. \n",
+    "Based on the information obtained in the previous steps, a 2D grid of cells is created. Each cell stores information about its status, indicating whether it is free, it is occupied by the Thymio (marked in green), the goal (marked in blue), or an obstacle (marked in black). \n",
     "\n",
     "After conversion, the 2D grid looks as follows:\n",
     "\n",
